samples/_failures_safe/1761330218_e2ac5b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e08009f1.c: In function ‘main’:
./samples/SAFE/__tmp_e08009f1.c:151:28: error: missing terminating " character
  151 |                     printf("Cycle %u: Processed value
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e08009f1.c:151:21: error: expected expression at end of input
  151 |                     printf("Cycle %u: Processed value
      |                     ^~~~~~
./samples/SAFE/__tmp_e08009f1.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e08009f1.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e08009f1.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e08009f1.c:151:21: error: expected declaration or statement at end of input
